Dat create user, adjust UI, icon and app name

--- a/survey-now-web-admin/src/App.css
+++ b/survey-now-web-admin/src/App.css
@@ -45,3 +45,9 @@
 .e-input-group:not(.e-float-icon-left), .e-input-group.e-success:not(.e-float-icon-left), .e-input-group.e-warning:not(.e-float-icon-left), .e-input-group.e-error:not(.e-float-icon-left), .e-input-group.e-control-wrapper:not(.e-float-icon-left), .e-input-group.e-control-wrapper.e-success:not(.e-float-icon-left), .e-input-group.e-control-wrapper.e-warning:not(.e-float-icon-left), .e-input-group.e-control-wrapper.e-error:not(.e-float-icon-left){
   border: none;
 }
+
+/* Sidebar Component */
+.main-content-scaled {
+  transform: scale(0.9); /* Adjust the scaling factor as needed */
+  transition: transform 0.3s; /* Add a transition for a smooth effect */
+}
